fixed bug with overflow text in post card, added form validation for add and edit user details form, fixed bug for change passsword button in user panel page, updated filter menu with new month names

--- a/client/src/app/feature/auth/components/user-details-form/user-details-form.component.scss
+++ b/client/src/app/feature/auth/components/user-details-form/user-details-form.component.scss
@@ -29,6 +29,10 @@
       color: var(--font-search-text);
     }
 
+    input.ng-touched.ng-invalid {
+      box-shadow: 0 5px 10px #7b1d20, 0 2px 4px #7b1d20;
+    }
+
     textarea {
       resize: vertical;
       min-height: 180px;
